# gh-mirror

./: .gitignore  .gitmodules  README.org  proof-of-juice.org
BOOKS/: TODO.org
BOOKS/ffmpeg-astro-electronic/: run-wget
BOOKS/py2guile/: README.org
BOOKS/py2guile/py2guile-tip/: .hg_archival.txt  .hgsigs  .hgtags  AUTHORS.in  Makefile.am  NEWS  README  configure.ac  gpl.tex  guile-basics.org  nagware.tex  py2guile-title.tex  py2guile.org
BOOKS/py2guile/py2guile-tip/.bugs/: bugs
BOOKS/r6rs/: README.org
CHEAT-SHEETS/: TODO.org
INCUBATOR/: README.org  dvdremuxer
PDF/: TODO.org
PDF/bitsgalore/: README.org  update.wget
SOURCE/: README.org
STOCK/: README.org  get_iplayer
WEB/: README.org
